--- a/Drink/app/src/main/AndroidManifest.xml
+++ b/Drink/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.sict.drink">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
